# agbpack

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build
.github/: mingw-cross.txt
.github/workflows/: build-ci.yml
doc/: format.md
rt/: Makefile
rt/src/: apack.s  crt0.S  stage1.S  stage2.S
src/: elf.h  main.c  wonderful.h
